tests/neg-custom-args/captures/linear-buffer-2.check
-- Error: tests/neg-custom-args/captures/linear-buffer-2.scala:13:13 ---------------------------------------------------
13 |  val buf3 = buf.append(3) // error
   |             ^^^
   |             Separation failure: Illegal access to {buf} which is hidden by the previous definition
   |             of value buf1 with type Buffer[Int]^.
   |             This type hides capabilities  {buf}
-- Error: tests/neg-custom-args/captures/linear-buffer-2.scala:20:13 ---------------------------------------------------
20 |  val buf3 = buf1.append(4) // error
   |             ^^^^
   |             Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |             @consume parameter or was used as a prefix to a @consume method on line 18
   |             and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer-2.scala:28:13 ---------------------------------------------------
28 |  val buf3 = buf1.append(4) // error
   |             ^^^^
   |             Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |             @consume parameter or was used as a prefix to a @consume method on line 25
   |             and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer-2.scala:38:13 ---------------------------------------------------
38 |  val buf3 = buf1.append(4) // error
   |             ^^^^
   |             Separation failure: Illegal access to (buf1 : Buffer[Int]^), which was passed to a
   |             @consume parameter or was used as a prefix to a @consume method on line 33
   |             and therefore is no longer available.
-- Error: tests/neg-custom-args/captures/linear-buffer-2.scala:42:4 ----------------------------------------------------
42 |    buf.append(1)  // error
   |    ^^^
   |    Separation failure: (buf : Buffer[Int]^) appears in a loop, therefore it cannot
   |    be passed to a @consume parameter or be used as a prefix of a @consume method call.
